--- a/chamber/css/styles.css
+++ b/chamber/css/styles.css
@@ -367,7 +367,7 @@ nav a:focus {
 
 /* Members Display */
 .members-flex-container {
-  display: flex;
+  display: row;
   flex-wrap: wrap;
   gap: 1.5rem;
   justify-content: center;
