--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -27,6 +27,11 @@ body {
     line-height: 1.6;
 }
 
+.h1{ 
+    color:#000308;
+    font-size: 2.5rem;
+}
+
 header, footer {
     background: var(--primary-color);
     color: #fff;
@@ -34,6 +39,7 @@ header, footer {
     text-align: center;
     letter-spacing: 1px;
 }
+
 
 main {
     padding: 1rem;
@@ -43,6 +49,7 @@ main {
     border-radius: 16px;
     box-shadow: 0 2px 16px rgba(38, 50, 56, 0.07);
 }
+
 
 .grid {
     display: grid;
